integ-tests/tests/snapshots/parser__signed_radix__plus_oct.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-number]: 
  ┌─ plus_oct:1:5
  │
1 │ a = +0o0
  │     ^^^^ unable to parse number
